# zero-trust

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  configuration.yaml
configuration/: base.yaml  local_docker.yaml  production.yaml
migrations/: 20240601184740_create_subscriptions_table.down.sql  20240601184740_create_subscriptions_table.up.sql  20240603042413_add_status_to_subscriptions.up.sql  20240603042629_make_status_not_null_in_subscriptions.up.sql  20240603042956_create_subscription_tokens_table.up.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
